welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: ';' expected but '=' found.
 x: String = "";
           ^BDRBuggle:3: error: illegal start of simple expression
	x = litMessage(var)
                       ^BDRBuggle:13: error: ')' expected but '}' found.
}
^