welcome.lessons.welcome.bdr.BDR.scala.code
 x: String = "";
while(estSurMessage()) {
	x = litMessage(var)
	if ( x=="R" ) { right();avance();}
	if ( x=="L"  ) {  left();avance()}
	if ( x=="I" ) {  retourne();avance();}
		if ( x=="C") {  avance();avance();avance();}
	if ( x=="Z"  ) { recule();}
if ( x=="A") {  avance();}
	if ( x=="B") {  avance();avance;}
	if ( x=="Y") {  recule();recule();}
	if ( x=="X"  ) {  recule();recule();recule();}
}





